--- a/plugins/org.corpus_tools.atomic.grapheditor.ui/plugin.xml
+++ b/plugins/org.corpus_tools.atomic.grapheditor.ui/plugin.xml
@@ -3,10 +3,9 @@
 <plugin>
 
    <extension
-         id="org.corpus_tools.atomic.grapheditor.segmentation.ui.fragment"
+         id="org.corpus_tools.atomic.grapheditor.ui.view.fragment"
          point="org.eclipse.e4.workbench.model">
       <fragment
-            apply="notexists"
             uri="fragment.e4xmi">
       </fragment>
    </extension>
