--- a/plugins/org.corpus_tools.atomic.grapheditor.ui/.project
+++ b/plugins/org.corpus_tools.atomic.grapheditor.ui/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.corpus_tools.atomic.grapheditor.segmentation.ui</name>
+	<name>org.corpus_tools.atomic.grapheditor.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
