--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.corpus_tools.atomic</groupId>
 	<artifactId>grapheditor</artifactId>
-	<version>0.4.0-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Atomic Grapheditor Project</name>
 
@@ -95,5 +95,9 @@
   	<module>plugins/org.corpus_tools.atomic.grapheditor.segmentation.api</module>
   	<module>feature/org.corpus_tools.atomic.grapheditor.feature</module>
   	<module>plugins/org.corpus_tools.atomic.grapheditor.ui</module>
+  	<module>
+  		plugins/org.corpus_tools.atomic.grapheditor.visuals
+  	</module>
+  	<module>plugins/org.corpus_tools.atomic.grapheditor</module>
 	</modules>
 </project>
