--- a/plugins/org.corpus_tools.atomic.grapheditor.ui/plugin.xml
+++ b/plugins/org.corpus_tools.atomic.grapheditor.ui/plugin.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?eclipse version="3.4"?>
 <plugin>
 
    <extension
-         id="org.corpus_tools.atomic.grapheditor.ui.view.fragment"
-         point="org.eclipse.e4.workbench.model">
-      <fragment
-            uri="fragment.e4xmi">
-      </fragment>
+         point="org.eclipse.ui.editors">
+      <editor
+            default="false"
+            name="Graph Editor - Segmentation"
+            extensions="salt"
+            class="org.corpus_tools.atomic.grapheditor.ui.parts.SegmentationView"
+            id="org.corpus_tools.atomic.grapheditor.ui.segmentationeditor">
+      </editor>
+      <editor
+            default="false"
+            name="Graph Editor"
+            class="org.corpus_tools.atomic.grapheditor.ui.parts.GraphEditor"
+            id="org.corpus_tools.atomic.grapheditor.ui.grapheditor">
+      </editor>
    </extension>
 
 </plugin>
