--- a/plugins/org.corpus_tools.atomic.grapheditor.ui/build.properties
+++ b/plugins/org.corpus_tools.atomic.grapheditor.ui/build.properties
@@ -2,6 +2,5 @@ output.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/,\
-               fragment.e4xmi
+               icons/
 source.. = src/main/java/
